--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="#" download="CV-Rafael-Pacheco" class="btn">Descargar CV</a>
         </div>
         <div class="home-img">
-            <img src="img/imagenes/rafael.png" alt="">
+            <img src="img/imagenes/rafael1.png" alt="">
         </div>
     </section>
 
