--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="#" class="btn">Leer más</a>
         </div>
         <div class="about-img">
-            <img src="img/imagenes/rafael.png" alt="">
+            <img src="img/imagenes/rafael1.png" alt="">
         </div>
     </section>
 
