--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
 
         <form action="https://formspree.io/f/xnqebgkn" method="POST">
             <div class="input-box">
-                <input type="text" placeholder="Ingresa Nombre Completo">
-                <input type="email" placeholder="Ingresa Correo">
+                <input type="text" name="nombre" placeholder="Ingresa Nombre Completo">
+                <input type="email" name="_replyto" placeholder="Ingresa Correo">
             </div>
             <div class="input-box">
-                <input type="number" placeholder="Ingresa Numero Telefonico">
-                <input type="text" placeholder="Ingrese Asunto">
+                <input type="tel" name="telefono" placeholder="Ingresa Numero Telefonico">
+                <input type="text" name="asunto" placeholder="Ingrese Asunto">
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese Mensaje"></textarea>
+            <textarea name="mensaje" id="" cols="30" rows="10" placeholder="Ingrese Mensaje"></textarea>
             <input type="submit" value="Enviar mensaje" class="btn">
         </form>
     </section>
