--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
             </div>
             <textarea name="mensaje" id="" cols="30" rows="10" placeholder="Ingrese Mensaje"></textarea>
             <input type="submit" value="Enviar mensaje" class="btn">
+            <span id="check-icon" class="check-icon" style="display: none;"><i class='bx bx-check'></i></span>
         </form>
     </section>
 
