--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio Web | Rafael Pacheco 💻</title>
+    <title>Rafael Pacheco | Software Developer 💻</title>
+    <link rel="icon" href="img/2.png" type="image/x-icon">
 
     <!-- box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -47,7 +48,7 @@
             <a href="#" download="CV-Rafael-Pacheco" class="btn">Descargar CV</a>
         </div>
         <div class="home-img">
-            <img src="img/imagenes/rafael1.png" alt="">
+            <img src="img/rafael1.png" alt="">
         </div>
     </section>
 
@@ -62,7 +63,7 @@
             <a href="#" class="btn">Leer más</a>
         </div>
         <div class="about-img">
-            <img src="img/imagenes/rafael1.png" alt="">
+            <img src="img/rafael1.png" alt="">
         </div>
     </section>
 
@@ -74,50 +75,50 @@
             <div class="certifications-box">
                 <i class='bx bxl-html5' ></i>
                 <h3>HTML 5</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos, neque sunt nihil reprehenderit numquam veniam doloremque omnis esse rem.</p>
-                <a href="#" class="btn">Read More</a>
+                <p>Certificado de Aprobacion de 'HTML 5: Desde Cero'.</p>
+                <a href="https://www.udemy.com/certificate/UC-461ef2cd-c0cd-4a4f-8af1-380039b0833e/" class="btn" target="_blank">Certification</a>
             </div>
-
+<!--
             <div class="certifications-box">
                 <i class='bx bxl-css3' ></i>
                 <h3>CSS 3</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos, neque sunt nihil reprehenderit numquam veniam doloremque omnis esse rem.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn" target="_blank">Read More</a>
             </div>
 
             <div class="certifications-box">
                 <i class='bx bxl-javascript' ></i>
                 <h3>JavaScript</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos, neque sunt nihil reprehenderit numquam veniam doloremque omnis esse rem.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn" target="_blank">Read More</a>
             </div>
 
             <div class="certifications-box">
                 <i class='bx bxl-javascript' ></i>
                 <h3>JavaScript</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos, neque sunt nihil reprehenderit numquam veniam doloremque omnis esse rem.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn" target="_blank">Read More</a>
             </div>
 
             <div class="certifications-box">
                 <i class='bx bxl-javascript' ></i>
                 <h3>JavaScript</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos, neque sunt nihil reprehenderit numquam veniam doloremque omnis esse rem.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn" target="_blank">Read More</a>
+            </div>
+-->
+            <div class="certifications-box">
+                <i class='bx bxl-mongodb' ></i>
+                <h3>MongoDB</h3>
+                <p>Certificado de Aprobacion de 'Getting Started with MongoDB Atlas'.</p>
+                <a href="https://ti-user-certificates.s3.amazonaws.com/ae62dcd7-abdc-4e90-a570-83eccba49043/b20c5fc8-1aec-42a7-bf18-2931266850fb-rafael-agustin-pacheco-lavado-51ffefc8-153d-4c66-894e-87f3fac39a3e-certificate.pdf" class="btn" target="_blank">Read More</a>
             </div>
 
             <div class="certifications-box">
-                <i class='bx bxl-javascript' ></i>
-                <h3>JavaScript</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos, neque sunt nihil reprehenderit numquam veniam doloremque omnis esse rem.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="certifications-box">
-                <i class='bx bxl-javascript' ></i>
-                <h3>JavaScript</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos, neque sunt nihil reprehenderit numquam veniam doloremque omnis esse rem.</p>
-                <a href="#" class="btn">Read More</a>
+                <i class='bx bx-certification' ></i>
+                <h3>Scrum Fundamentals Certified</h3>
+                <p>Certificado de Aprobacion de 'Scrum Fundamentals Certified'.</p>
+                <a href="https://c46e136a583f7e334124-ac22991740ab4ff17e21daf2ed577041.ssl.cf1.rackcdn.com/Certificate/ScrumFundamentalsCertified-RafaelAgustinPachecoLavado-983243.pdf" class="btn" target="_blank">Certification</a>
             </div>
         </div>
     </section>
@@ -128,7 +129,7 @@
 
         <div class="projects-container">
             <div class="projects-box">
-                <img src="img/imagenes/proyectos.jpg" alt="">
+                <img src="img/proyectos.jpg" alt="">
                 <div class="projects-layer">
                     <h4>Proyecto 1</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, quo?</p>
@@ -137,7 +138,7 @@
             </div>
 
             <div class="projects-box">
-                <img src="img/imagenes/proyectos.jpg" alt="">
+                <img src="img/proyectos.jpg" alt="">
                 <div class="projects-layer">
                     <h4>Proyecto 2</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, quo?</p>
@@ -146,7 +147,7 @@
             </div>
 
             <div class="projects-box">
-                <img src="img/imagenes/proyectos.jpg" alt="">
+                <img src="img/proyectos.jpg" alt="">
                 <div class="projects-layer">
                     <h4>Proyecto 3</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, quo?</p>
@@ -155,7 +156,7 @@
             </div>
 
             <div class="projects-box">
-                <img src="img/imagenes/proyectos.jpg" alt="">
+                <img src="img/proyectos.jpg" alt="">
                 <div class="projects-layer">
                     <h4>Proyecto 4</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, quo?</p>
@@ -164,7 +165,7 @@
             </div>
 
             <div class="projects-box">
-                <img src="img/imagenes/proyectos.jpg" alt="">
+                <img src="img/proyectos.jpg" alt="">
                 <div class="projects-layer">
                     <h4>Proyecto 5</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, quo?</p>
@@ -173,7 +174,7 @@
             </div>
 
             <div class="projects-box">
-                <img src="img/imagenes/proyectos.jpg" alt="">
+                <img src="img/proyectos.jpg" alt="">
                 <div class="projects-layer">
                     <h4>Proyecto 6</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, quo?</p>
