Cambio de contenido a certificaciones

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <div class="certifications-box">
                 <i class='bx bxl-html5' ></i>
                 <h3>HTML 5</h3>
-                <p>Certificado de Aprobacion de 'HTML 5: Desde Cero'.</p>
-                <a href="https://www.udemy.com/certificate/UC-461ef2cd-c0cd-4a4f-8af1-380039b0833e/" class="btn" target="_blank">Certification</a>
+                <p>Certificado de Aprobacion de 'HTML 5: Desde Cero - Udemy'.</p>
+                <a href="https://www.udemy.com/certificate/UC-461ef2cd-c0cd-4a4f-8af1-380039b0833e/" class="btn" target="_blank">Read More</a>
             </div>
 <!--
             <div class="certifications-box">
@@ -118,7 +118,7 @@
                 <i class='bx bx-certification' ></i>
                 <h3>Scrum Fundamentals Certified</h3>
                 <p>Certificado de Aprobacion de 'Scrum Fundamentals Certified'.</p>
-                <a href="https://c46e136a583f7e334124-ac22991740ab4ff17e21daf2ed577041.ssl.cf1.rackcdn.com/Certificate/ScrumFundamentalsCertified-RafaelAgustinPachecoLavado-983243.pdf" class="btn" target="_blank">Certification</a>
+                <a href="https://c46e136a583f7e334124-ac22991740ab4ff17e21daf2ed577041.ssl.cf1.rackcdn.com/Certificate/ScrumFundamentalsCertified-RafaelAgustinPachecoLavado-983243.pdf" class="btn" target="_blank">Read More</a>
             </div>
         </div>
     </section>
