--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafael Pacheco | Software Developer xd 💻</title>
+    <title>Rafael Pacheco | Software Developer 💻</title>
     <link rel="icon" href="img/logo.png" type="image/x-icon">
 
     <!-- box icons -->
